output/illustrative_examples/figure7_TJ/explanation_from_other_techniques/explanation_PEM_2.7.txt
line 8
    print(remaining_time, end='\r')
                             ^
SyntaxError: invalid syntax